Added email + re-ordered/renamed sections + Removed ice  creams + added ColorPicker + removed translated comics + removed background.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
    <div class="c7-dots">
     <a href="#hello" class="c7-dots-7"><div></div> <span class="sTitle">Me</span></a>
-    <a href="#evol" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
+    <a href="#code" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
     <a href="#recipes" class="c7-dots-5"><div></div><span class="sTitle">Cooking</span></a>
     <a href="#comics" class="c7-dots-4"><div></div><span class="sTitle">Graphic Novels</span></a>
+    <a href="#fractals" class="c7-dots-2"><div></div><span class="sTitle">Inspiration</span></a>
     <a href="#movies" class="c7-dots-3"><div></div><span class="sTitle">Movies</span></a>
-    <a href="#fractals" class="c7-dots-2"><div></div><span class="sTitle">Thoughts</span></a>
-    <a href="#chakras" class="c7-dots-1"><div></div><span class="sTitle">Chakras</span></a>
+    <a href="#chakras" class="c7-dots-1"><div></div><span class="sTitle">Meditation</span></a>
     <span class="clearer"></span>
    </div>
 
@@ -52,12 +52,14 @@
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
 	 I'm French, in my late 40s. I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.</p>
 
+	 <p>My email is <a href="mailto:ogiulieri@gmail.com">ogiulieri@gmail.com</a>.</p>
+
 </section>
 
-<section id="evol" class="c6"><div class="sTitle">Code</div>
+<section id="code" class="c6"><div class="sTitle">Code</div>
 	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a>, and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 
-	<div id="evol2" class="pixGroup evolPix"></div>
+	<div id="code2" class="pixGroup evolPix"></div>
 	
 	<p>My favorite quote about programming is 
 		<i>"Smart data structures and dumb code works a lot better than the
@@ -72,69 +74,19 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-<a id="linkIceCream" class="link
-" href="javascript:showIceCream()">[ Show more desserts ]</a>
-<div id="IceCream">
-	<p>Ice creams, do no require cooking, just assembling, and are totally worth it.</p>
- 
-	<div class="iceCreamCard">
-		<div><strong>Poire Belle Hélène</strong>
-		 <ul>
-		 	<li>Vanilla ice cream</li>
-		 	<li>Pears in sirop</li>
-		 	<li>Melted chocolat</li>
-		 	<li>Chantilly cream</li>
-		 	<li>Grilled almonds</li>
-		 </ul>
-		 </div>
-		<div><strong>Peach Melba</strong>
-		 <ul>
-		 	<li>Vanilla ice cream</li>
-		 	<li>Peaches in sirop</li>
-		 	<li>Chantilly cream</li>
-		 	<li>Grilled almonds</li>
-		 </ul>
-		</div>
-		<div><strong>Café Liégeois</strong>
-		 <ul>
-		 	<li>Coffee ice cream</li>
-		 	<li>Coffee</li>
-		 	<li>Chantilly cream</li>
-		 	<li>Coffee beans</li>
-		 </ul>
-		</div>
-		<div>
-		<strong>Vacherin</strong>
-		 <ul>
-		 	<li>Meringue</li>
-		 	<li>Vanilla ice cream</li>
-		 	<li>Coffee/caramel/other ice cream or sorbet</li>
-		 	<li>Chantilly cream</li>
-		 </ul>
-		</div>
-	</div>
-	<div class="clearer"/>
-</div> 
 </section>
 
 <section id="comics" class="c4"><div class="sTitle">Graphic Novels</div>
 	<p>I like to read and collect graphic novels, mostly sci-fi, usually in French.</p>
 	<div id="comics2" class="pixGroup comicsPix"></div>
 
-	<p>...sometimes in English.</p>
-	<div id="comics-us2" class="pixGroup comicsPix"></div>
+	<p>... and sometimes in English.</p>
+	<div id="comics_us2" class="pixGroup comicsPix"></div>
 
-	<p class="clearer">Did you know that some of the best European graphic novels are now available in English?</p>
-	<div id="comics-amazon2" class="pixGroup comicsPix"></div>
 </section>
 
-<section id="movies" class="c3"><div class="sTitle">Movies</div>
-	<p>I like to watch sci-fi movies.</p>
-	<div id="movies2" class="pixGroup moviePix"></div>
-</section>
-
-<section id="fractals" class="c2"><div class="sTitle">Thoughts</div>
-	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
+<section id="fractals" class="c3"><div class="sTitle">Inspiration</div>
+	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and to think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
 
@@ -142,13 +94,14 @@ other way around."</i> - Eric S. Raymond
 	<div id="art2" class="pixGroup smallPix"></div>
 </section>
 
-<section id="chakras" class="c1"><div class="sTitle">Chakras</div>
-	<p>I like to meditate and make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
-	<div id="chakras2" class="pixGroup chakraPix"></div>
+<section id="movies" class="c2"><div class="sTitle">Movies</div>
+	<p>I like to watch sci-fi movies.</p>
+	<div id="movies2" class="pixGroup moviePix"></div>
 </section>
 
-<section id="you" class="c8"><div class="sTitle">You</div>
-	<p>What do you like?</p>
+<section id="chakras" class="c1"><div class="sTitle">Meditation</div>
+	<p>I like to meditate and to make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
+	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
 <div class="bottomSpace"></div>
