--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </section>
 
-<section id="ny" class="c7"><div class="sTitle">Me</div>
+<section id="me" class="c7"><div class="sTitle">Me</div>
 
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
 	 I'm French, in my late 40s. I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.</p>
