Change avatar picture on click.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="avatar-holder">
 		<div class="avatar">
 			<div class="pixTitleHolder">
-				<img src="pix/olivier-giulieri.jpg">
+				<img src="pix/olivier/olivier-giulieri.jpg" onclick="switchPix(this)">
 			</div>
 			<span class="sociallinks">
 				<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
