Edits on Madeleine recipe + raspberry heart picture.

--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -1,9 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-<title>Madeleines : Evoluteur's recipe</title>
+<title>Madeleines Recipe from my Grandmother</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
 	<meta name="keywords" content="cooking dessert madeleine french butter cake" />
+	<meta name="description" content="Madeleines recipe from my Grandmother" />
 </head>
 
 <body>
@@ -16,6 +17,9 @@
 <h1>Madeleines</h1>
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-3styles.jpg"/></div>
 
+<p>A 250 years old recipe which is still trendy.</p>
+
+<p>Prep Time: 30 minutes - Cook Time: 10-15 minutes - Servings: 16</p>
 
 <p>Ingredients for 16 madeleines:
 <ul>
@@ -27,8 +31,11 @@
 	<li>1 teaspoon of yeast or 1/4 teaspoon baking powder</li>
 	<li>(optional) 1 lemon zest or some vanilla extract</li>
 	<li>(optional) pine nuts or raw sliced almonds</li>
+	<li>(optional) raspberries</li>
 </ul>
 </p>
+
+<div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-raspberry-heart2.jpg"/></div>
 
 
 <p>Tools:
@@ -51,13 +58,15 @@
 	<li>Put a little melted butter on the madeleines pan (to prevent sticking)</li>
 	<li>Fill each slot on the madeleines pan w/ dough</li>
 	<li>(optional) Add sliced almonds or pine nuts on top</li>
+	<li>(optional) Add a raspberry in the center</li>
 	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
 	<li>Get the madeleines tray out of the oven, and the madelines out of the tray, and let cool down</li>
 </ol>
 
-<p>Notes: best on the day they are baked, but can be kept for a week in a container.</p>
 
 <p><img class="pixShadow" src="../../pix/recipes/madeleines-tray.jpg"/></p>
+
+<p>Notes: best on the day they are baked, but can be kept for a week in a container.</p>
 
 </section>
 
