--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="js/me.js"></script>
 	<link href="css/me.css" rel="stylesheet" /> 
 
-	<meta name="keywords" content="olivier giulieri home page evoluteur french" />
+	<meta name="keywords" content="olivier giulieri home page evoluteur madeleine frech cake" />
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
@@ -18,7 +18,7 @@
 <section id="hello" class="c0">
 
    <div class="c7-dots">
-    <a href="#hello" class="c7-dots-7"><div></div> <span class="sTitle">Me</span></a>
+    <a href="#hello" class="c7-dots-7"><div></div><span class="sTitle">Me</span></a>
     <a href="#code" class="c7-dots-6"><div></div><span class="sTitle">Code</span></a>
     <a href="#recipes" class="c7-dots-5"><div></div><span class="sTitle">Cooking</span></a>
     <a href="#comics" class="c7-dots-4"><div></div><span class="sTitle">Graphic Novels</span></a>
@@ -31,7 +31,7 @@
 	<div class="avatar-holder">
 		<div class="avatar">
 			<div class="pixTitleHolder">
-				<img src="pix/olivier/og-neige.jpg" onclick="switchPix(this)">
+				<img src="pix/olivier/olivier-giulieri.jpg" onclick="switchPix(this)">
 			</div>
 			<span class="sociallinks">
 				<a href="https://github.com/evoluteur"><img src="pix/social/git.gif" alt="GitHub" /></a>
@@ -44,16 +44,13 @@
 		</div>
 	</div>
 	<h2 class="helloworld">Hello,</h2>
-
 </section>
 
 <section id="me" class="c7"><div class="sTitle">Me</div>
-
 	<p>My name is <strong>Olivier Giulieri</strong> (username <strong>Evoluteur</strong>). 
 	 I'm French, in my late 40s. I live in the San Francisco Bay Area with my lovely cat <a href="neige.html">Neige</a>.</p>
 
 	 <p>My email is <a href="mailto:ogiulieri@gmail.com">ogiulieri@gmail.com</a>.</p>
-
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
@@ -68,12 +65,10 @@ other way around."</i> - Eric S. Raymond
 	</p>
 </section>
 
-
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
 	<p>I like to cook (and eat), especially desserts.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
-
 </section>
 
 <section id="comics" class="c4"><div class="sTitle">Graphic Novels</div>
@@ -82,13 +77,11 @@ other way around."</i> - Eric S. Raymond
 
 	<p>... and sometimes in English.</p>
 	<div id="comics_us2" class="pixGroup comicsPix"></div>
-
 </section>
 
 <section id="fractals" class="c3"><div class="sTitle">Inspiration</div>
 	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and to think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
-
 
 	<p>I also like visual art made by humans.</p>
 	<div id="art2" class="pixGroup smallPix"></div>
