Added prep time, cook rime, and servings to recipes.

--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -15,6 +15,7 @@
 
 <section class="c00">
 <h1>Madeleines</h1>
+
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-3styles.jpg"/></div>
 
 <p>A 250 years old recipe which is still trendy.</p>
@@ -29,7 +30,7 @@
 	<li>2 eggs</li>
 	<li>1 pinch of salt</li>
 	<li>1 teaspoon of yeast or 1/4 teaspoon baking powder</li>
-	<li>(optional) 1 lemon zest or some vanilla extract</li>
+	<li>(optional) 1 lemon zest and/or some vanilla extract</li>
 	<li>(optional) pine nuts or raw sliced almonds</li>
 	<li>(optional) raspberries</li>
 </ul>
@@ -57,7 +58,7 @@
 	<li>Mix until the dough is homogeneous</li>
 	<li>Put a little melted butter on the madeleines pan (to prevent sticking)</li>
 	<li>Fill each slot on the madeleines pan w/ dough</li>
-	<li>(optional) Add sliced almonds or pine nuts on top</li>
+	<li>(optional) Add sliced almonds and/or pine nuts on top</li>
 	<li>(optional) Add a raspberry in the center</li>
 	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
 	<li>Get the madeleines tray out of the oven, and the madelines out of the tray, and let cool down</li>
