--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -17,6 +17,8 @@
 
 <h3 style="color:#ff1744;">Page Under Construction</h3>
 
+<p>Prep Time: 30 minutes - Cook Time: 45 minutes - Servings: 6</p>
+
 <p>Ingredients:
 <ul>
 	<li>4 pears</li>
