--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -15,6 +15,8 @@
 <section class="c00">
 <h1>Crème brûlée</h1>
 
+<p>Prep Time: 25 minutes - Cook Time: 1+ hour - Servings: 6</p>
+
 <p>Ingredients for 6 large or 8 small crèmes brûlées:
 
 <ul>
