--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -3,7 +3,7 @@
 <title>Madeleines Recipe from my Grandmother</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
-	<meta name="keywords" content="cooking dessert madeleine french butter cake" />
+	<meta name="keywords" content="madeleine recipe cooking dessert french tea butter sponge cake" />
 	<meta name="description" content="Madeleines recipe from my Grandmother" />
 </head>
 
@@ -14,11 +14,11 @@
 </div>
 
 <section class="c00">
-<h1>Madeleines</h1>
+<h1>Madeleines Recipe</h1>
 
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-3styles.jpg"/></div>
 
-<p>A 250 years old recipe which is still trendy.</p>
+<p>This is my Grandmother's recipe for Madeleines. That's how I make them.</p>
 
 <p>Prep Time: 30 minutes - Cook Time: 10-15 minutes - Servings: 16</p>
 
@@ -29,7 +29,7 @@
 	<li>120 grams of sugar</li>
 	<li>2 eggs</li>
 	<li>1 pinch of salt</li>
-	<li>1 teaspoon of yeast or 1/4 teaspoon baking powder</li>
+	<li>1 teaspoon of yeast or 1/2 teaspoon baking powder</li>
 	<li>(optional) 1 lemon zest and/or some vanilla extract</li>
 	<li>(optional) pine nuts or raw sliced almonds</li>
 	<li>(optional) raspberries</li>
@@ -38,11 +38,12 @@
 
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-raspberry-heart2.jpg"/></div>
 
-
 <p>Tools:
 <ul>
-	<li>Madeleines pan</li>
+	<li>Madeleine pan</li>
 	<li>Sifter</li>
+	<li>Cooling rack</li>
+	<li>Mixing bowl</li>
 </ul>
 </p>
 
@@ -54,20 +55,23 @@
 	<li>Mix soft (but not melted) butter and sugar</li>
 	<li>Add eggs and flour (using the sifter) and a pinch of salt</li>
 	<li>Add the yeast or baking powder</li>
-	<li>(optional) Add the lemon zest or vanilla extract</li>
+	<li>(optional) Add the lemon zest and/or vanilla extract</li>
 	<li>Mix until the dough is homogeneous</li>
 	<li>Put a little melted butter on the madeleines pan (to prevent sticking)</li>
 	<li>Fill each slot on the madeleines pan w/ dough</li>
-	<li>(optional) Add sliced almonds and/or pine nuts on top</li>
+	<li>(optional) Add sliced almonds or pine nuts on top</li>
 	<li>(optional) Add a raspberry in the center</li>
 	<li>Put in the oven for 10 to 15 minutes (until golden)</li>
-	<li>Get the madeleines tray out of the oven, and the madelines out of the tray, and let cool down</li>
+	<li>Get the madeleines tray out of the oven, and the madeleines out of the tray, and let cool down</li>
 </ol>
 
 
-<p><img class="pixShadow" src="../../pix/recipes/madeleines-tray.jpg"/></p>
+<p><img class="pixShadow" src="../../pix/recipes/madeleines-mold.jpg"/></p>
 
-<p>Notes: best on the day they are baked, but can be kept for a week in a container.</p>
+<p>Notes: 
+
+Best on the day they are baked, but can be kept for a week in a container or frozen.
+</p>
 
 </section>
 
