--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="fractals" class="c3"><div class="sTitle">Inspiration</div>
-	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes art) and to think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
+	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
 	<p>I also like visual art made by humans.</p>
