--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -10,11 +10,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear Cream Tart</a> - Madeleines
+<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - Madeleines
 </div>
 
 <section class="c00">
-<h1>Madeleines Recipe</h1>
+<h1>Madeleines recipe</h1>
 
 <div class="pixShadow" style="float:right;"><img src="../../pix/recipes/madeleines-3styles.jpg"/></div>
 
