--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -9,11 +9,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - Pear Cream Tart - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - Pear cream tart - <a href="madeleines.html">Madeleines</a>
 </div>
 
 <section class="c00">
-<h1>Pear cream tart</h1>
+<h1>Pear cream tart recipe</h1>
 
 <h3 style="color:#ff1744;">Page Under Construction</h3>
 
