--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -9,11 +9,11 @@
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : Crème brûlée - <a href="pear-cream-tart.html">Pear Cream Tart</a> - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > Desserts : Crème brûlée - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a>
 </div>
 
 <section class="c00">
-<h1>Crème brûlée</h1>
+<h1>Crème brûlée recipe</h1>
 
 <p>Prep Time: 25 minutes - Cook Time: 1+ hour - Servings: 6</p>
 
