--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -15,6 +15,8 @@
 <section class="c00">
 <h1>Crème brûlée recipe</h1>
 
+<div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee2.jpg"></div>
+
 <p>Prep Time: 25 minutes - Cook Time: 1+ hour - Servings: 6</p>
 
 <p>Ingredients for 6 large or 8 small crèmes brûlées:
@@ -69,8 +71,13 @@
 </ol>
 
 
-<p>Notes: Great w/ Sauterne wine.</p>
+<p>Notes: 
 
+<ul>
+	<li>Great w/ Sauterne wine.</li>
+	<li>Replace heavy whip cream by half-and-half for a lighter version.</li>
+</ul>
+</p>
 </section>
 </body>
 
