--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
-	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build UIs for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a>, and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a>, and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 
 	<div id="code2" class="pixGroup evolPix"></div>
 	
@@ -66,7 +66,10 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
-	<p>I like to cook (and eat), especially desserts.</p>
+	<p>I like to cook (and eat), especially desserts. My specialties are 
+		<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
+		pear cream tart,
+		and <a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 </section>
