Link to Oneness + more movies and comics initially displayed.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
-<body onload="setPage()">
+<body onload="setupPage()">
 
 <section id="hello" class="c0">
 
