Added ice cream page.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ other way around."</i> - Eric S. Raymond
 		and <a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
+
+	<p>I also like <a href="recipes/desserts/ice-creams.html">ice cream</a>.</p>
 </section>
 
 <section id="comics" class="c4"><div class="sTitle">Graphic Novels</div>
