Added link to madeleine-data-science.

--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -70,7 +70,11 @@
 
 <p>Notes: 
 
-Best on the day they are baked, but can be kept for a week in a container or frozen.
+<ul>
+	<li>
+	Best on the day they are baked, but can be kept for a week in a container or frozen.</li>
+	<li>Many other Madeleine recipes are available (even salty madeleines) using different <a href="https://evoluteur.github.io/madeleine-data-science/">proportions of flour, sugar, butter, and egg</a>. </li>
+	</ul>
 </p>
 
 </section>
