--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
-	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also experiment with <a target="_new" href="https://github.com/evoluteur">open source projects</a> like <a target="_new" href="http://evolutility.org">Evolutility</a>, and I occasionally <a target="_new" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also experiment with <a target="_blank" href="https://github.com/evoluteur">open source projects</a> and I occasionally <a target="_blank" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 
 	<div id="code2" class="pixGroup evolPix"></div>
 	
+
 	<p>My favorite quote about programming is 
-		<i>"Smart data structures and dumb code works a lot better than the
-other way around."</i> - Eric S. Raymond
+		<i>"<strong>Smart data structures and dumb code works a lot better than the
+other way around.</strong>"</i> - Eric S. Raymond
 	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
+
+	<p>I'm obsessed with <a ref="https://en.wikipedia.org/wiki/Model-driven_architecture" target="_blank">model-driven architecture</a>. I experiment with  <a target="_blank" href="http://evolutility.org">Evolutility</a> CRUD framework since 2002.</p>
+
 </section>
 
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
@@ -85,7 +89,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="fractals" class="c3"><div class="sTitle">Inspiration</div>
-	<p>I like to look at <a target="_new" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a target="_new" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
+	<p>I like to look at <a target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a target="_blank" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
 	<p>I also like visual art made by humans.</p>
@@ -98,7 +102,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
-	<p>I like to meditate and to make <a target="_new" href="http://chakradesign.com">chakras charms</a>.</p>
+	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
