--- a/index.html
+++ b/index.html
@@ -108,6 +108,8 @@ other way around.</strong>"</i> - Eric S. Raymond
 
 <div class="bottomSpace"></div>
 
+<footer>Version 2017.07.24</footer>
+
 </body>
 
 </html>
