--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 	
 
 	<p>My favorite quote about programming is 
-		<i>"<strong>Smart data structures and dumb code works a lot better than the
-other way around.</strong>"</i> - Eric S. Raymond
+		<i>"Smart data structures and dumb code works a lot better than the
+other way around."</i> - Eric S. Raymond
 	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
 
