--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="js/me.js"></script>
 	<link href="css/me.css" rel="stylesheet" /> 
 
-	<meta name="keywords" content="olivier giulieri home page evoluteur madeleine frech cake" />
+	<meta name="keywords" content="olivier giulieri home page evoluteur UI UX developer engineer meditator" />
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
@@ -54,7 +54,7 @@
 </section>
 
 <section id="code" class="c6"><div class="sTitle">Code</div>
-	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also experiment with <a target="_blank" href="https://github.com/evoluteur">open source projects</a> and I occasionally <a target="_blank" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
+	<p>I like to code (mostly Javascript and CSS, sometimes SQL). I usually build user interfaces for startups. I also play with <a target="_blank" href="https://github.com/evoluteur">open source projects</a> and I occasionally <a target="_blank" href="https://www.codeproject.com/script/Articles/MemberArticles.aspx?amid=849212">post</a> about it.</p>
 
 	<div id="code2" class="pixGroup evolPix"></div>
 	
@@ -65,7 +65,9 @@ other way around."</i> - Eric S. Raymond
 	in <a href="https://en.wikipedia.org/wiki/The_Cathedral_and_the_Bazaar">The Cathedral and the Bazaar</a>. 
 	</p>
 
-	<p>I'm obsessed with <a ref="https://en.wikipedia.org/wiki/Model-driven_architecture" target="_blank">model-driven architecture</a>. I experiment with  <a target="_blank" href="http://evolutility.org">Evolutility</a> CRUD framework since 2002.</p>
+	<p>I really enjoy metadata, so I am very interested in model-driven architecture, low-code platforms, and data visualization. 
+	I experiment with my own project <a target="_blank" href="http://evolutility.org">Evolutility</a> CRUD framework since 2002.</p>
+
 
 </section>
 
@@ -77,7 +79,9 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I also like <a href="recipes/desserts/ice-creams.html">ice cream</a>.</p>
+	<p>I recently started making salty madeleines. My favorite kind is with duck prosciutto.</p>
+
+	<p></p>
 </section>
 
 <section id="comics" class="c4"><div class="sTitle">Graphic Novels</div>
@@ -102,13 +106,13 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
-	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com">chakras charms</a>.</p>
+	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/charms.html">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
 <div class="bottomSpace"></div>
 
-<footer>Version 2017.07.24</footer>
+<footer>Version 2017.08.04</footer>
 
 </body>
 
