--- a/neige.html
+++ b/neige.html
@@ -17,7 +17,7 @@
 
 <section class="c00"> 
 
-	<h2>I tried to take a selfy with my cat.</h2>
+	<h2>I tried to take a selfy with my beautiful cat... but she wouldn't stand still.</h2>
 
 	<div> 
 		<img class="pixShadow" src="pix/neige/neige-me-1.jpg">
@@ -25,8 +25,9 @@
 		<img class="pixShadow" src="pix/neige/neige-me-3.jpg">
 		<img class="pixShadow" src="pix/neige/neige-me-4.jpg">
 	</div>
-</div>
 
 </section>
+
+</body>
 
 </html>
