--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
-	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/charms.html">chakras charms</a>.</p>
+	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>. If you want one, <a target="_blank" href="http://chakradesign.com/charms.html">design it yourself</a> and I will make it for you.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
 </section>
 
