Added Klimt + resized other paintings pictures.

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ other way around."</i> - Eric S. Raymond
 
 	<p>I also like visual art made by humans.</p>
 	<div id="art2" class="pixGroup smallPix"></div>
+
+	<p class="grey">BTW, some of these paintings are fractals.</p>
 </section>
 
 <section id="movies" class="c2"><div class="sTitle">Movies</div>
@@ -111,7 +113,7 @@ other way around."</i> - Eric S. Raymond
 
 <div class="bottomSpace"></div>
 
-<footer>Version 2017.10.16</footer>
+<footer>Version 2017.11.29</footer>
 
 </body>
 
