Added short list of European graphic novels now available in English.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started making salty madeleines. My favorite kind is with duck prosciutto.</p>
+	<p>I recently started experimenting with salty madeleines. My favorite kind so far is with duck prosciutto.</p>
 
 	<p></p>
 </section>
@@ -89,6 +89,9 @@ other way around."</i> - Eric S. Raymond
 
 	<p>... and sometimes in English.</p>
 	<div id="comics_us2" class="pixGroup comicsPix"></div>
+
+	<p>If you are into comics, or curious about European graphic novels, several great ones are now compiled into single books and translated to English.</p>
+	<div id="comics_euro_us2" class="pixGroup comicsPix"></div>
 </section>
 
 <section id="fractals" class="c3"><div class="sTitle">Inspiration</div>
@@ -98,7 +101,7 @@ other way around."</i> - Eric S. Raymond
 	<p>I also like visual art made by humans.</p>
 	<div id="art2" class="pixGroup smallPix"></div>
 
-	<p class="grey">BTW, some of these paintings are fractals.</p>
+	<p>By the way, some of these paintings are <a target="_blank" href="https://en.wikipedia.org/wiki/Fractal">fractals</a>.</p>
 </section>
 
 <section id="movies" class="c2"><div class="sTitle">Movies</div>
@@ -113,7 +116,7 @@ other way around."</i> - Eric S. Raymond
 
 <div class="bottomSpace"></div>
 
-<footer>Version 2017.11.29</footer>
+<footer>Version 2017.12.21</footer>
 
 </body>
 
