--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started experimenting with salty madeleines. My favorite kind so far is with duck prosciutto.</p>
+	<p>I recently started experimenting with salty madeleines. Salty madeleines with duck prosciutto are really good, but I still prefer the <a href="recipes/desserts/madeleines.html">sweet madeleines</a> with lemon zest and pine nuts.</p>
 
 	<p></p>
 </section>
@@ -110,8 +110,9 @@ other way around."</i> - Eric S. Raymond
 </section>
 
 <section id="chakras" class="c1"><div class="sTitle">Meditation</div>
-	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>. If you want one, <a target="_blank" href="http://chakradesign.com/charms.html">design it yourself</a> and I will make it for you.</p>
+	<p>I like to meditate and to make <a target="_blank" href="http://chakradesign.com/gallery.html">chakras charms</a>.</p>
 	<div id="chakras2" class="pixGroup chakraPix"></div>
+	<p>You could <a target="_blank" href="http://chakradesign.com/charms.html">design your own chakras charm</a> too.</p>
 </section>
 
 <div class="bottomSpace"></div>
