Recipes: text edits + new photo.

--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -73,7 +73,7 @@
 <ul>
 	<li>
 	Best on the day they are baked, but can be kept for a week in a container or frozen.</li>
-	<li>Many other Madeleine recipes are available (even salty madeleines) using different <a href="https://evoluteur.github.io/madeleine-data-science/">proportions of flour, sugar, butter, and egg</a>. </li>
+	<li>Many other Madeleine recipes are available (even salty madeleines) using <a href="https://evoluteur.github.io/madeleinology/">different proportions of flour, sugar, butter, and eggs</a>. </li>
 	</ul>
 </p>
 
