--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -23,13 +23,13 @@
 
 <ul>
 	<li>45 cl heavy whip cream (or half-and-half for the lighter version)</li>
-	<li>6 egg yulks</li>
+	<li>6 egg yolks</li>
 	<li>15 cl of Milk (or almond milk)</li>
 	<li>1 pinch of salt</li>
 	<li>150 g of white granulated Sugar</li>
 	<li>Brown Sugar</li>
 	<li>Vanilla extract</li>
-	<li>A few raspberry or pieces of banana or lemon zest (optional)</li>
+	<li>A few raspberry, or lemon zest, or banana pieces, or pineapple pieces (optional)</li>
 	<li>Rum or liquor (optional)</li>
 </ul>
 </p>
@@ -45,17 +45,18 @@
 
 <p>Instructions:
 <ol>
-	<li>pre-heat the oven to 250F</li>
+	<li>pre-heat the oven to 250°F</li>
 	<li>beat the egg yolks (no use for the whites)</li>
 	<li>add the sugar and a pinch of salt</li>
 	<li>add the cream, the milk and the vanilla</li>
 	<li>pour in ramekins</li>
-	<li>add a few raspberry or pieces of banana or lemon zest in some ramekins</li>
+	<li>(optionally) add fruit in some ramekins</li>
 	<li>fill a long baking dish 1/3 w/ water and put the ramekins in it (the water should not go in the ramekins)</li>
 	<li>bake for about 1 hour depending on your oven (they are cooked when shaking the dish the cream is firm but not hard)</li>
 	<li>let cool down and put in the fridge for a few hours (they will become harder when cold)</li>
 </ol>
 
+<div class="pixShadow" style="float:right;"><img src="../../pix/recipes/creme-brulee-bernzomatic.jpg"></div>
 <p>Instructions for burning the caramel crust (just before serving):
 
 <ol>Using a torch (I personaly use a <a href="http://www.bernzomatic.com/" target="b">Bernzomatic</a>):
@@ -74,7 +75,7 @@
 <p>Notes: 
 
 <ul>
-	<li>Great w/ Sauterne wine.</li>
+	<li>Great w/ <a href="https://en.wikipedia.org/wiki/Sauternes_(wine)" target="wine">Sauterne wine</a>.</li>
 	<li>Replace heavy whip cream by half-and-half for a lighter version.</li>
 </ul>
 </p>
