Recipes: pear cream tart recipe + "desserts" page, link in navigation bar, and favicon.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="description" content="Home Page of Olivier Giulieri" />
 </head>
 
-<body onload="setupPage()">
+<body onload="setupPage()" class="idx">
 
 <section id="hello" class="c0">
 
@@ -73,12 +73,12 @@ other way around."</i> - Eric S. Raymond
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
 	<p>I like to cook (and eat), especially desserts. My specialties are 
 		<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
-		pear cream tart,
+		<a href="pear-cream-tart.html">pear cream tart</a>,
 		and <a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started experimenting with salty madeleines. Salty madeleines with duck prosciutto are really good, but I still prefer the <a href="recipes/desserts/madeleines.html">sweet madeleines</a> with lemon zest and pine nuts.</p>
+	<p>I recently started experimenting with salty madeleines. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
 
 	<p></p>
 </section>
