--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -1,41 +1,40 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-<title>Ice Cream</title>
+<title>French desserts recipes</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
-	<style>
- 
-.iceCreamCard > div{
-  float:left;
-    margin: 10px 10px 0 0;
-    float: left;
-    width: 250px;
-    height: 200px;
-}
-.iceCreamCard>div>strong{
-  margin-left: 17px;
-}
-</style>
+	<meta name="keywords" content="icecream dessert recipe" />
+	<meta name="description" content="Recipes for some of my favorite desserts." />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear Cream Tart</a> - <a href="madeleines.html">Madeleines</a>
 </div>
 
 <section class="c00">
-<h1>Ice Cream</h1>
- 
-<div id="IceCream">
-	<p>These are a few ice cream classics I like to make at home.</p>
- 
+<h1>My Desserts Recipes</h1>
+
+<p>These are the recipes to some of my favorite desserts.</p>
+
+<div id="recipes2" class="pixGroup evolPix">
+	<div class="pixTitleHolder"><a href="creme-brulee.html"><img src="../../pix/recipes/creme-brulee.jpg"><div class="pix-title">Crème brûlée</div></a></div>
+	<div class="pixTitleHolder"><a href="pear-cream-tart.html"><img src="../../pix/recipes/pear-tart.jpg"><div class="pix-title">Pear cream tart</div></a></div>
+	<div class="pixTitleHolder"><a href="madeleines.html"><img src="../../pix/recipes/madeleine.jpg"><div class="pix-title">Madeleines</div></a></div>
+	<div class="clearer"></div>
+</div>
+
+<p>...and ice creams.</p> 
+
+<div id="IceCream">  
 	<div class="iceCreamCard">
 		<div><strong>Poire Belle Hélène</strong>
 		 <ul>
 		 	<li>Vanilla ice cream</li>
 		 	<li>Pears in sirop</li>
-		 	<li>Melted chocolate</li>
+		 	<li>Melted chocolat</li>
 		 	<li>Chantilly cream</li>
 		 	<li>Grilled almonds</li>
 		 </ul>
@@ -67,13 +66,11 @@
 		</div>
 	</div>
 	<div class="clearer"/>
-
+</div> 
 
 	<p>Melted chocolate = <a href="https://smile.amazon.com/Ghirardelli-Chocolate-Bittersweet-Baking-Chips/dp/B005HZM6UU" target="_blank">Ghirardelli chocolate bittersweet baking chips</a> and a little bit of heavy whipping cream <a href="https://en.wikipedia.org/wiki/Bain-marie" target="_blank">au bain Marie</a>.</p>
 
 	<p>When prep time is an issue, I simply have a <a target="_blank" href="https://www.haagendazs.us/products/4061/bars/chocolate-dark-chocolate-almond-bar/">Haagen-Dazs dark chocolate almond bar</a> or some <a target="_blank" href="http://www.honeymoonbrands.com/buy/southern-pecan">Honeymoon southern pecan ice cream</a>.</p>
-
-</div> 
 
 
 </section>
