--- a/recipes/desserts/pear-cream-tart.html
+++ b/recipes/desserts/pear-cream-tart.html
@@ -1,29 +1,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-<title>Pear cream tart : Evoluteur's recipe</title>
+<title>Pear cream tart recipe</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
-	<meta name="keywords" content="cooking dessert recipe pear cream tart french" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+	<meta name="keywords" content="cooking dessert recipe pear cream tart french homemade" />
+	<meta name="description" content="Pear cream tart recipe" />
 </head>
 
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - Pear cream tart - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : <a href="creme-brulee.html">Crème brûlée</a> - Pear cream tart - <a href="madeleines.html">Madeleines</a>
 </div>
 
 <section class="c00">
 <h1>Pear cream tart recipe</h1>
 
-<h3 style="color:#ff1744;">Page Under Construction</h3>
 
-<p>Prep Time: 30 minutes - Cook Time: 45 minutes - Servings: 6</p>
+<p>Prep Time: 30 minutes - Cook Time: 40 minutes - Servings: 6</p>
 
 <p>Ingredients:
 <ul>
 	<li>4 pears</li>
 	<li>pie crust (make it or buy it)</li>
-	<li>1 egg yulk</li>
+	<li>1 egg yolk</li>
 	<li>15 cl of heavy whip cream</li>
 	<li>vanilla extract</li>
 	<li>a pinch of salt</li>
@@ -33,18 +34,19 @@
 <p>Instructions:
 <ol>
 	<li>Pre-heat oven at 375°F</li>
-	<li>Spread pie crust on dish</li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Spread pie crust on dish and make holes with a fork</li>
+	<li>Put in oven for 10 minutes</li>
+	<li>Place pears</li>
+	<li>Cook for 25 min</li>
+	<li>Add cream (egg yolk + whip cream + vanilla + pinch of salt)</li>
+	<li>Put back in oven and turn off oven. Let cook for 5 minutes while oven is cooling down</li>
 </ol>
 
-<p>Notes: great w/ Vanilla ice-cream.</p>
+<p>Notes: great w/ Vanilla ice cream.</p>
 
 </section>
+
+<div class="cog">&#169; 2018 Olivier Giulieri</div>
 
 </body>
 
