--- a/recipes/desserts/creme-brulee.html
+++ b/recipes/desserts/creme-brulee.html
@@ -1,15 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-<title>Crème brûlée : Evoluteur's recipe</title>
+<title>Crème brûlée recipe</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
-	<meta name="keywords" content="cooking dessert recipe creme brulee french" />
+	<meta name="keywords" content="french creme brulee cooking dessert homemade recipe" />
+	<meta name="description" content="Crème brûlée recipe" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : Crème brûlée - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a>
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : Crème brûlée - <a href="pear-cream-tart.html">Pear cream tart</a> - <a href="madeleines.html">Madeleines</a>
 </div>
 
 <section class="c00">
@@ -80,6 +82,9 @@
 </ul>
 </p>
 </section>
+
+<div class="cog">&#169; 2018 Olivier Giulieri</div>
+
 </body>
 
 </html>
