--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -1,16 +1,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-<title>Madeleines Recipe from my Grandmother</title>
+<title>My Grandmother's Madeleines recipe</title>
     <meta charset="utf-8">
 	<link href="../../css/me.css" rel="stylesheet" />
-	<meta name="keywords" content="madeleine recipe cooking dessert french tea butter sponge cake" />
+	<meta name="keywords" content="french homemade sweet madeleine cooking dessert tea butter sponge cake recipe" />
 	<meta name="description" content="Madeleines recipe from my Grandmother" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
 
 <div class="nav">
-<a href="../../index.html">Evoluteur</a> > Desserts : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - Madeleines
+<a href="../../index.html">Evoluteur</a> > <a href="index.html">Desserts</a> : <a href="creme-brulee.html">Crème brûlée</a> - <a href="pear-cream-tart.html">Pear cream tart</a> - Madeleines
 </div>
 
 <section class="c00">
@@ -78,6 +79,8 @@
 </p>
 
 </section>
+
+<div class="cog">&#169; 2018 Olivier Giulieri</div>
 
 </body>
 
