--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -17,7 +17,7 @@
 <section class="c00">
 <h1>My Desserts Recipes</h1>
 
-<p>These are the recipes to some of my favorite desserts.</p>
+<p>These are the recipes for some of my favorite desserts.</p>
 
 <div id="recipes2" class="pixGroup evolPix">
 	<div class="pixTitleHolder"><a href="creme-brulee.html"><img src="../../pix/recipes/creme-brulee.jpg"><div class="pix-title">Crème brûlée</div></a></div>
@@ -26,7 +26,7 @@
 	<div class="clearer"></div>
 </div>
 
-<p>...and ice creams.</p> 
+<p>For ice creams I stick to the classics.</p> 
 
 <div id="IceCream">  
 	<div class="iceCreamCard">
