--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ other way around."</i> - Eric S. Raymond
 	<p>I also like visual art made by humans.</p>
 	<div id="art2" class="pixGroup smallPix"></div>
 
-	<p>By the way, some of these paintings are <a target="_blank" href="https://en.wikipedia.org/wiki/Fractal">fractals</a>.</p>
+	<p>By the way, some of these paintings use fractals.</p>
 </section>
 
 <section id="comics" class="c3"><div class="sTitle">Graphic Novels</div>
