--- a/recipes/desserts/index.html
+++ b/recipes/desserts/index.html
@@ -26,7 +26,7 @@
 	<div class="clearer"></div>
 </div>
 
-<p>For ice creams I stick to the classics.</p> 
+<p><br/>For <strong>ice creams</strong> I stick to the classics.</p> 
 
 <div id="IceCream">  
 	<div class="iceCreamCard">
