--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ other way around."</i> - Eric S. Raymond
 <section id="recipes" class="c5"><div class="sTitle">Cooking</div>
 	<p>I like to cook (and eat), especially desserts. My specialties are 
 		<a href="recipes/desserts/creme-brulee.html">crèmes brûlées</a>,
-		<a href="pear-cream-tart.html">pear cream tart</a>,
+		<a href="recipes/desserts/pear-cream-tart.html">pear cream tart</a>,
 		and <a href="recipes/desserts/madeleines.html">madeleines</a>.</p>
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
