--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ other way around."</i> - Eric S. Raymond
 
 <div class="bottomSpace"></div>
 
-<footer>Version 2018.01.05</footer>
+
+<footer>Version 2018.01.05 - &#169; 2018 Olivier Giulieri</footer>
 
 </body>
 
