--- a/neige.html
+++ b/neige.html
@@ -17,7 +17,9 @@
 
 <section class="c00"> 
 
-	<h2>I tried to take a selfy with my beautiful cat... but she wouldn't stand still.</h2>
+	<h2>Selfy with Neige</h2>
+
+	<p>I tried to take a selfy with my beautiful cat... but she wouldn't stand still.</p>
 
 	<div> 
 		<img class="pixShadow" src="pix/neige/neige-me-1.jpg">
