Added book carving.

--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@ other way around."</i> - Eric S. Raymond
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
 	<p>I also like visual art made by humans.</p>
+
 	<div id="art2" class="pixGroup smallPix"></div>
 
-	<p>By the way, some of these paintings use fractals.</p>
+	<p></p>
+
+
+	<p>I recently learned that <a href="https://www.ted.com/talks/brian_dettmer_old_books_reborn_as_intricate_art" target="ted">old books could be reborn as art</a>, and I liked the idea, so I'm giving a try at <a href="book-carving.html">book carving</a>.</p>
+
 </section>
 
 <section id="comics" class="c3"><div class="sTitle">Graphic Novels</div>
@@ -118,7 +123,7 @@ other way around."</i> - Eric S. Raymond
 <div class="bottomSpace"></div>
 
 
-<footer>Version 2018.01.05 - &#169; 2018 Olivier Giulieri</footer>
+<footer>Version 2018.02.18 - &#169; 2018 Olivier Giulieri</footer>
 
 </body>
 
