Added picture of baby Neige.

--- a/neige.html
+++ b/neige.html
@@ -28,6 +28,12 @@
 		<img class="pixShadow" src="pix/neige/neige-me-4.jpg">
 	</div>
 
+	<p>Neige was white as a baby, so her name means "Snow" in French.</p>
+
+	<div> 
+		<img class="pixShadow" src="pix/neige/bebe-neige.jpg">
+	</div>
+
 </section>
 
 </body>
