Added salty madeleines.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ other way around."</i> - Eric S. Raymond
 
 	<div id="recipes2" class="pixGroup evolPix"></div>
 
-	<p>I recently started experimenting with salty madeleines. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
+	<p>I recently started experimenting with <a href="recipes/salty_madeleines.html">salty madeleines</a>. Salty madeleines with duck prosciutto are really good, but I still prefer the sweet madeleines with lemon zest and pine nuts.</p>
 
 	<p></p>
 </section>
