--- a/recipes/desserts/madeleines.html
+++ b/recipes/desserts/madeleines.html
@@ -74,7 +74,8 @@
 <ul>
 	<li>
 	Best on the day they are baked, but can be kept for a week in a container or frozen.</li>
-	<li>Many other Madeleine recipes are available (even salty madeleines) using <a href="https://evoluteur.github.io/madeleinology/">different proportions of flour, sugar, butter, and eggs</a>. </li>
+	<li>Many other Madeleine recipes are available using <a href="https://evoluteur.github.io/madeleinology/">different proportions of flour, sugar, butter, and eggs</a>. </li>
+	<li>It is also possible to make <a href="../salty_madeleines.html">salty madeleines</a>.</li>
 	</ul>
 </p>
 
