--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ other way around."</i> - Eric S. Raymond
 	<p>I like to look at <a target="_blank" href="https://www.google.com/search?q=fractals&source=lnms&tbm=isch">fractals</a> (where math becomes visual art) and to think about <a target="_blank" href="http://www.sheldrake.org/research/morphic-resonance/introduction">morphic fields</a>.</p>
 	<div id="fractals2" class="pixGroup smallPix"></div>
 
-	<p>I also like visual art made by humans.</p>
+	<p>I also like visual art made by humans. <span class="grey">... and it often contains fractals.</span></p>
 
 	<div id="art2" class="pixGroup smallPix"></div>
 
