--- a/neige.html
+++ b/neige.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" > 
 <head>
-	<title>Selfy with my cat</title>
+	<title>Selfy with Neige</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -12,7 +12,7 @@
 <body>
 
 <div class="nav">
-	<a href="index.html">Evoluteur</a> > My Cat
+	<a href="index.html">Evoluteur</a> > Neige
 </div>
 
 <section class="c00"> 
@@ -28,7 +28,7 @@
 		<img class="pixShadow" src="pix/neige/neige-me-4.jpg">
 	</div>
 
-	<p>Neige was white as a baby, so her name means "Snow" in French.</p>
+	<p>In case you are wondering why my cat is named "Neige" (French for "Snow"), it is because she used to be white.</p>
 
 	<div> 
 		<img class="pixShadow" src="pix/neige/bebe-neige.jpg">
