Salty madeleine: added link to regular madeleine recipe.

--- a/recipes/salty_madeleines.html
+++ b/recipes/salty_madeleines.html
@@ -19,7 +19,7 @@
 
 <h2>Salty Madeleines</h2>
 
-<p>By removing the sugar and adjusting the ingredients quantities, you can also make salty madeleines. It is an opportunity to try baking in ham, cheese, and/or vegetables.</p>
+<p>By removing the sugar in the regular <a href="desserts/madeleines.html">Madeleine recipe</a>, you can also make salty madeleines. It is an opportunity to try baking in ham, cheese, and/or vegetables.</p>
 
 <div class="m-salty">
 
@@ -37,7 +37,6 @@
 
     <p>My favorite, so far, is duck prosciutto. </p>
 </div>
-
 
 </section>
 
